After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779506 - adding printers is broken
adding printers is broken
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Printers
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Marek Kašík
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-03 02:26 UTC by Matthias Clasen
Modified: 2017-05-29 15:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (358.61 KB, image/png)
2017-03-03 02:26 UTC, Matthias Clasen
  Details
printers: Scroll view to show newly added Printer (2.75 KB, patch)
2017-05-16 11:39 UTC, Felipe Borges
none Details | Review
printers: Drop "select_new_printer" property leftover (1.60 KB, patch)
2017-05-16 11:41 UTC, Felipe Borges
committed Details | Review
printers: Scroll view to show newly added Printer (2.82 KB, patch)
2017-05-29 15:41 UTC, Felipe Borges
committed Details | Review

Description Matthias Clasen 2017-03-03 02:26:20 UTC
Created attachment 347113 [details]
screenshot

With the new printer panel, adding my printer does not work anymore (it used to work before). When I select the printer from the add dialog, two things happen right away:

1) I get a "Failed to add" dialog

2) I get a notification that tells me that a driver is needed

When I click on the notification, gnome-software tells me that the driver is already installed

Also note that there is a bunch of errors about 

Failed to execute program org.fedoraproject.Config.Printing: No such file or directory
Comment 1 Felipe Borges 2017-03-03 09:30:58 UTC
Thanks for your bug report.

As we are trying to reproduce your issue, I would like to know:

 * are you running a local cups server?

 * is it a samba printer?

This would help us narrow down the options to reproduce it, since the Add Printers Dialog basically just changed aesthetically in the last cycles.
Comment 2 Marek Kašík 2017-03-03 10:30:02 UTC
Hi Matthias,

it seems that this is a bug in system-config-printer. I've found that there is "Exec=/usr/local/bin/scp-dbus-service" in /usr/share/dbus-1/services/org.fedoraproject~Printing.service on rawhide.
Could you change the path to "/usr/bin/scp-dbus-service" and try it again?
Comment 3 Matthias Clasen 2017-03-03 11:50:53 UTC
 * are you running a local cups server?
 * is it a samba printer?

no and no

Could you change the path to "/usr/bin/scp-dbus-service" and try it again?

yes, that makes the printer addition technically work. But it reveals some UX issues with the new panel:

- the printer gets added in the list, but there is no further hint. I would at least expect the list to be scrolled to reveal the new printer

- the 'print test page' functionality is gone. Is that intentional ?
Comment 4 Allan Day 2017-03-06 15:50:40 UTC
(In reply to Matthias Clasen from comment #3)
...
> - the printer gets added in the list, but there is no further hint. I would
> at least expect the list to be scrolled to reveal the new printer

Makes sense.

> - the 'print test page' functionality is gone. Is that intentional ?

It's missing from the mockups, but I don't remember that being a deliberate decision. The option could be added to the printer gear menu.
Comment 5 Marek Kašík 2017-03-06 16:05:34 UTC
(In reply to Allan Day from comment #4)
> (In reply to Matthias Clasen from comment #3)
> > - the 'print test page' functionality is gone. Is that intentional ?
> 
> It's missing from the mockups, but I don't remember that being a deliberate
> decision. The option could be added to the printer gear menu.

It is actually on the mockup on the Options dialog's header bar.
Felipe, could you prepare a patch for that?
Comment 6 Allan Day 2017-03-07 13:56:23 UTC
(In reply to Marek Kašík from comment #5)
...
> > It's missing from the mockups, but I don't remember that being a deliberate
> > decision. The option could be added to the printer gear menu.
> 
> It is actually on the mockup on the Options dialog's header bar.

Ah, so it is!
Comment 7 Felipe Borges 2017-03-07 15:31:08 UTC
(In reply to Marek Kašík from comment #5)
> (In reply to Allan Day from comment #4)
> > (In reply to Matthias Clasen from comment #3)
> > > - the 'print test page' functionality is gone. Is that intentional ?
> > 
> > It's missing from the mockups, but I don't remember that being a deliberate
> > decision. The option could be added to the printer gear menu.
> 
> It is actually on the mockup on the Options dialog's header bar.
> Felipe, could you prepare a patch for that?

Sure: https://bugzilla.gnome.org/show_bug.cgi?id=779708
Comment 8 Felipe Borges 2017-05-16 11:39:42 UTC
Created attachment 351964 [details] [review]
printers: Scroll view to show newly added Printer

In scenarios with a long list of printers, it might be difficult
to find a newly added printer.

This patch make the view scroll to the allocated position of the
printer entry.
Comment 9 Felipe Borges 2017-05-16 11:41:37 UTC
Created attachment 351965 [details] [review]
printers: Drop "select_new_printer" property leftover

The select_new_printer property used to be an indicator whether
the view should change to present the newly added printer.

With the Printers presented as a list in the new design, there's
no need for this flag.
Comment 10 Marek Kašík 2017-05-29 15:03:04 UTC
Review of attachment 351964 [details] [review]:

This patch looks good but we can improve it! Lets take the margin into account and subtract the size of the top margin of the printer entry from the value you scroll by (gtk_widget_get_margin_top (printer_entry)). It will look a little better. Thanks.
Comment 11 Marek Kašík 2017-05-29 15:04:46 UTC
Review of attachment 351965 [details] [review]:

Thank you for catching this. Just rebase the patch for current master and push it please.
Comment 12 Felipe Borges 2017-05-29 15:36:28 UTC
Comment on attachment 351965 [details] [review]
printers: Drop "select_new_printer" property leftover

Attachment 351965 [details] pushed as f3141e4 - printers: Drop "select_new_printer" property leftover
Comment 13 Felipe Borges 2017-05-29 15:41:27 UTC
Created attachment 352794 [details] [review]
printers: Scroll view to show newly added Printer

In scenarios with a long list of printers, it might be difficult
to find a newly added printer.

This patch make the view scroll to the allocated position of the
printer entry.
Comment 14 Marek Kašík 2017-05-29 15:47:05 UTC
Review of attachment 352794 [details] [review]:

Thank you for the modification. Push it to master branch please.
Comment 15 Felipe Borges 2017-05-29 15:50:00 UTC
Thanks for your reviews!

Attachment 352794 [details] pushed as 6dcf057 - printers: Scroll view to show newly added Printer